# Nocturn-Server

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt
NocturnLib/: CMakeLists.txt
NocturnLib/Nocturn/: NocturnLib.cpp  NocturnLib.h
NocturnLib/Nocturn/Platform/: logging.hpp  platform.hpp
Server/: CMakeLists.txt  main.cpp
